pre-alpha version 1.22 Added: better camera (with sample image) Fixed: some bugs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="index.css" />
 		<meta charset="UTF-8" />
 		<meta name="description" content="Five Nights at Szuj" />
-		<meta name="author" content="Yevhen Maskaiev" />
+		<meta name="author" content="Evgen4X" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>FNaS</title>
 	</head>
